fix(overlay): fixed missing scrollbar in overlays

--- a/apps/client/src/app/modules/list/list-details-panel/list-details-panel.component.less
+++ b/apps/client/src/app/modules/list/list-details-panel/list-details-panel.component.less
@@ -1,4 +1,6 @@
 :host ::ng-deep .overlay {
+  overflow: auto;
+
   .ant-collapse {
     background: none;
     border: none;
